--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-junit = { strictly = '5.10.1' }
+junit = { strictly = '5.10.0' }
 nva = { strictly = '1.35.0' }
 zalando = { strictly = '0.27.1' }
 awsLambdaJavaCore = { strictly = '1.2.2' }
@@ -9,6 +9,7 @@ slf4j = { strictly = '2.0.9' }
 awslog4j2 = { strictly = '1.5.1' }
 awsSdk2 = { strictly = '2.20.141' }
 jena = { strictly = '4.7.0' }
+jackson = { strictly = '2.15.2' }
 
 
 [libraries]
@@ -25,6 +26,12 @@ nva-commons-core = { group = 'com.github.bibsysdev', name = 'core', version.ref 
 nva-commons-auth = { group = 'com.github.bibsysdev', name = 'auth', version.ref = 'nva' }
 nva-commons-apigateway = { group = 'com.github.bibsysdev', name = 'apigateway', version.ref = 'nva' }
 nva-eventhandlers = { group = 'com.github.bibsysdev', name = 'eventhandlers', version.ref = 'nva' }
+
+jackson-core = { group = 'com.fasterxml.jackson.core', name = 'jackson-core', version.ref = 'jackson' }
+jackson-databind = { group = 'com.fasterxml.jackson.core', name = 'jackson-databind', version.ref = 'jackson' }
+jackson-annotations = { group = 'com.fasterxml.jackson.core', name = 'jackson-annotations', version.ref = 'jackson' }
+jackson-datatype-jdk8 = { group = 'com.fasterxml.jackson.datatype', name = 'jackson-datatype-jdk8', version.ref = 'jackson' }
+jackson-datatype-jsr310 = { group = 'com.fasterxml.jackson.datatype', name = 'jackson-datatype-jsr310', version.ref = 'jackson' }
 
 aws-sdk2-eventbridge = { group = 'software.amazon.awssdk', name = 'eventbridge', version.ref = 'awsSdk2' }
 aws-sdk2-urlconnectionclient = { group = 'software.amazon.awssdk', name = 'url-connection-client', version.ref = 'awsSdk2' }
@@ -50,3 +57,4 @@ zalando = { group = 'org.zalando', name = 'problem', version.ref = 'zalando' }
 
 [bundles]
 jena = ['jena-core', 'jena-arq']
+testing = [ 'junit-jupiter-api', 'junit-jupiter-params', 'junit-jupiter-engine', 'nva-testutils' ]
