--- a/template.yaml
+++ b/template.yaml
@@ -14,6 +14,14 @@ Parameters:
   NeptuneInstanceClass:
     Type: String
     Default: db.serverless
+  CustomDomainBasePath:
+    Type: String
+    Description: Base path mapping
+    Default: report
+  Suffix:
+    Type: String
+    Default: ''
+    Description: Suffix used for naming resources for feature branches to avoid conflicts.
 
 Mappings:
   SubnetConfig:
@@ -31,6 +39,9 @@ Mappings:
       CIDR: '10.0.4.0/24'
     Lambda2:
       CIDR: '10.0.5.0/24'
+
+Conditions:
+  WithSuffix: !Not [ !Equals [ !Ref Suffix, '' ] ]
 
 Globals:
   Function:
@@ -206,7 +217,7 @@ Resources:
 
   NeptuneSecurityGroup:
     Type: AWS::EC2::SecurityGroup
-    DependsOn: LambdaSecurityGroup
+    # DependsOn: LambdaSecurityGroup
     Properties:
       GroupName: !Sub "${ProjectName}-neptune-security-group"
       GroupDescription: Allow access to Amazon Neptune from Lambda
