Re-instate lambda permission

--- a/template.yaml
+++ b/template.yaml
@@ -156,6 +156,13 @@ Resources:
           Parameters:
             Location: ./docs/openapi.yaml
 
+  ApiPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !Ref FetchDataReportHandler
+      Principal: "apigateway.amazonaws.com"
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${DataReportApi}/GET/"
 
   #===========================BasePathMappings========================================================
   BasePathMapping:
