Generate test data pairs for affiliation query

--- a/report-api/build.gradle
+++ b/report-api/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation libs.jackson.databind
     implementation libs.nva.commons.apigateway
     testImplementation libs.bundles.testing
+    testImplementation 'com.opencsv:opencsv:5.9'
 }
 
 repositories {
