Add support for logging

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -63,4 +63,5 @@ mockito-core = { group = 'org.mockito', name = 'mockito-core', version.ref = 'mo
 
 [bundles]
 jena = ['jena-core', 'jena-arq']
+logging = ['log4j-core', 'log4j-api', 'log4j-slf4j2-impl', 'slf4j-api', 'nva-logutils']
 testing = [ 'junit-jupiter-api', 'junit-jupiter-params', 'junit-jupiter-engine', 'nva-testutils', 'mockito-core' ]
