--- a/data-loading/build.gradle
+++ b/data-loading/build.gradle
@@ -3,7 +3,8 @@ plugins {
 }
 
 dependencies {
-
+    implementation libs.bundles.logging
+    testImplementation libs.nva.testutils
 }
 
 repositories {
