--- a/data-loading/build.gradle
+++ b/data-loading/build.gradle
@@ -3,7 +3,16 @@ plugins {
 }
 
 dependencies {
+    implementation libs.aws.sdk2.lambda.events
+    implementation libs.aws.lambda.java.core
+    implementation libs.bundles.logging
 
+    testImplementation libs.nva.s3
+    testImplementation libs.jackson.databind
+    testImplementation libs.aws.sdk2.s3
+    testImplementation libs.nva.json
+    testImplementation libs.nva.commons.core
+    testImplementation libs.nva.testutils
 }
 
 repositories {
