Add sqs:DeleteMessage to policy

--- a/template.yaml
+++ b/template.yaml
@@ -142,6 +142,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - sqs:ReceiveMessage
+                  - sqs:DeleteMessage
                 Resource:
                   - !GetAtt DataReportPersistedResourceQueue.Arn
         - PolicyName: writeLog
