--- a/template.yaml
+++ b/template.yaml
@@ -143,6 +143,7 @@ Resources:
                 Action:
                   - sqs:ReceiveMessage
                   - sqs:DeleteMessage
+                  - sqs:SendMessage
                 Resource:
                   - !GetAtt DataReportPersistedResourceQueue.Arn
         - PolicyName: writeLog
