Add resource DataLoadingDLQ to queue policy

--- a/template.yaml
+++ b/template.yaml
@@ -148,6 +148,7 @@ Resources:
                   - sqs:GetQueueAttributes
                 Resource:
                   - !GetAtt DataReportPersistedResourceQueue.Arn
+                  - !GetAtt DataLoadingDLQ.Arn
         - PolicyName: writeLog
           PolicyDocument:
             Version: 2012-10-17
