Green test shouldExtractAndLogKeyPrefix. New test shouldLogNoFolderIfKeyHasNoParent

--- a/data-loading/build.gradle
+++ b/data-loading/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 dependencies {
+    implementation libs.nva.commons.core
     implementation libs.aws.sdk2.lambda.events
     implementation libs.aws.lambda.java.core
     implementation libs.bundles.logging
