Np 45931 distinguish update types (#11)
* shouldExtractAndLogOperationType

* Refactor, enum for event type. New test shouldLogUnknownEventTypeIfEventTypeIsUnknown

* Fix codacy issue: overloaded methods

--- a/template.yaml
+++ b/template.yaml
@@ -256,8 +256,8 @@ Resources:
             InputPathsMap:
               bucketName: "$.detail.bucket.name"
               key: "$.detail.object.key"
-              operation: "$.detail.reason"
-            InputTemplate: '{"bucketName": <bucketName>, "key": <key>, "operation": <operation>}'
+              eventType: "$.detail.reason"
+            InputTemplate: '{"bucketName": <bucketName>, "key": <key>, "eventType": <eventType>}'
           DeadLetterConfig:
             Arn: !GetAtt DataReportPersistedResourceDLQ.Arn
           RetryPolicy:
